# asio-aggregator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
backup/: CMakeLists.txt
backup/src/: aggregator.cpp  aggregator.h  binance_connector.cpp  binance_connector.h  bitget_connector.cpp  bitget_connector.h  main.cpp  market_connector.cpp  market_connector.h  okx_connector.cpp  okx_connector.h
config/: exchanges.json
docker/: Dockerfile.aggregator  Dockerfile.client_bbo  Dockerfile.client_price_bands  Dockerfile.client_volume_bands
include/: Aggregator.h  aggregator.h  binance_connector.h  bitget_connector.h  bybit_connector.h  connector.h  market_connector.h  okx_connector.h
junk/: CMakeLists.txt
junk/include/: aggregator.h  binance_connector.h  connector.h
junk/src/: binance-connector  binance_connector.cpp  connector.cpp  main.cpp  main.cpp.bak  test_connectors.cpp.bak
src/: Aggregator.cpp  bbo_client.cpp  binance_connector.cpp  bitget_connector.cpp  bybit_connector.cpp  client_bbo.cpp  client_price_bands.cpp  client_volume_bands.cpp  connector.cpp  main.cpp  market_connector.cpp  okx_connector.cpp  price_bands_client.cpp  tests.cpp  volume_bands_client.cpp
